--- a/index.html
+++ b/index.html
@@ -122,7 +122,18 @@
 
         <div class="grid-2">
           <div></div>
-          <div class="right">
+          
+          <div class="grid-3">
+            <div>
+              <label>Pago con</label>
+              <select id="ventaPago">
+                <option value="efectivo" selected>Efectivo</option>
+                <option value="tarjeta">Tarjeta</option>
+                <option value="transferencia">Transferencia</option>
+              </select>
+            </div>
+          </div>
+<div class="right">
             <button class="btn" onclick="Ventas.confirmar()">✅ Confirmar venta</button>
           </div>
         </div>
