--- a/index.html
+++ b/index.html
@@ -122,18 +122,7 @@
 
         <div class="grid-2">
           <div></div>
-          
-          <div class="grid-3">
-            <div>
-              <label>Pago con</label>
-              <select id="ventaPago">
-                <option value="efectivo" selected>Efectivo</option>
-                <option value="tarjeta">Tarjeta</option>
-                <option value="transferencia">Transferencia</option>
-              </select>
-            </div>
-          </div>
-<div class="right">
+          <div class="right">
             <button class="btn" onclick="Ventas.confirmar()">✅ Confirmar venta</button>
           </div>
         </div>
@@ -188,40 +177,59 @@
     </section>
 
     <section id="view-membresias" class="view hidden">
-      <div class="panel">
-        <div class="panel-title">🎟️ Registrar Membresía</div>
-        <div class="grid-3">
-          <div><label>Cliente</label>
-            <div class="searchbox">
-              <input id="memClienteSearch" placeholder="🔎 Buscar nombre, tel o email" oninput="Membresias.searchCliente(this.value)" autocomplete="off">
-              <div id="memClienteResults" class="autocomplete hidden"></div>
-              <input id="memClienteId" type="hidden">
-            </div>
-          </div>
-          <div><label>Tipo</label><div style="display:flex;gap:8px"><select id="memTipo" onchange="Membresias.changeTipo()"></select><button class="btn small outline" onclick="Membresias.manageTipos()">⚙️ Tipos</button></div></div>
-          <div><label>Inicio</label><input id="memInicio" type="date"></div>
-          <div><label>Fin</label><input id="memFin" type="date"></div>
-          <div><label>Notas</label>\1\n
-      <label for="memPago">Pago con</label>
-      <select id="memPago" class="input">
-        <option value="efectivo" selected>Efectivo</option>
-        <option value="tarjeta">Tarjeta</option>
-        <option value="transferencia">Transferencia</option>
+  <div class="panel">
+    <div class="panel-title">🎟️ Registrar Membresía</div>
+    <div class="grid-3">
+      <div>
+        <label>Cliente</label>
+        <div class="searchbox">
+          <input id="memClienteSearch" placeholder="🔎 Buscar nombre, tel o email" oninput="Membresias.searchCliente(this.value)" autocomplete="off">
+          <div id="memClienteResults" class="autocomplete hidden"></div>
+          <input id="memClienteId" type="hidden">
+        </div>
+      </div>
+      <div>
+        <label>Tipo</label>
+        <div style="display:flex;gap:8px;align-items:center">
+          <select id="memTipo"></select>
+          <button class="btn small" onclick="Membresias.manageTipos()">⚙️ Tipos</button>
+        </div>
+      </div>
+      <div><label>Inicio</label><input id="memInicio" type="date"></div>
+      <div><label>Fin</label><input id="memFin" type="date"></div>
+      <div class="col-span-2">
+        <label>Notas</label>
+        <input id="memNotas" placeholder="Notas de la membresía">
+      </div>
+      <div>
+        <label>Pago con</label>
+        <select id="memPago">
+          <option value="efectivo" selected>Efectivo</option>
+          <option value="tarjeta">Tarjeta</option>
+          <option value="transferencia">Transferencia</option>
+        </select>
+      </div>
+      <div class="col-span-3 right">
+        <button class="btn" onclick="Membresias.guardar()">💾 Guardar</button>
+        <button class="btn outline" onclick="Membresias.cobrarAqui()">💰 Vender</button>
+      </div>
+    </div>
+  </div>
+  <div class="panel">
+    <div class="panel-title">🎟️ Membresías</div>
+    <div class="filters">
+      <input id="memSearch" placeholder="Buscar cliente..." oninput="Membresias.renderTabla()">
+      <select id="memStatus" onchange="Membresias.renderTabla()">
+        <option value="todos">Todos</option>
+        <option value="activa">Activas</option>
+        <option value="vencida">Vencidas</option>
+        <option value="próxima">Próx. a vencer</option>
       </select>
-</div>
-          <div class="right"><button class="btn" onclick="Membresias.guardar()">💾 Guardar</button> <button class="btn outline" onclick="Membresias.vender()">💰 Vender</button></div>
-        </div>
-      </div>
-      <div class="panel">
-        <div class="panel-title">🎟️ Membresías</div>
-        <div class="filters">
-          <input id="memSearch" placeholder="Buscar cliente..." oninput="Membresias.renderTabla()">
-          <select id="memStatus" onchange="Membresias.renderTabla()"><option value="">Todos</option><option value="activa">Activas</option><option value="vencida">Vencidas</option><option value="próxima">Próx. a vencer</option></select>
-          <button class="btn small" onclick="Membresias.exportCSV()">📤 Exportar CSV</button>
-        </div>
-        <div id="memTabla" class="table"></div>
-      </div>
-    </section>
+      <button class="btn small" onclick="Membresias.exportCSV()">📤 Exportar CSV</button>
+    </div>
+    <div id="memTabla" class="table"></div>
+  </div>
+</section>
 
     <section id="view-cafeteria" class="view hidden"><div class="panel"><div class="panel-title">☕ Cafetería</div><div id="cafGrid" class="catalog"></div></div></section>
 
