--- a/index.html
+++ b/index.html
@@ -122,18 +122,7 @@
 
         <div class="grid-2">
           <div></div>
-          
-          <div class="grid-3">
-            <div>
-              <label>Pago con</label>
-              <select id="ventaPago">
-                <option value="efectivo" selected>Efectivo</option>
-                <option value="tarjeta">Tarjeta</option>
-                <option value="transferencia">Transferencia</option>
-              </select>
-            </div>
-          </div>
-<div class="right">
+          <div class="right">
             <button class="btn" onclick="Ventas.confirmar()">✅ Confirmar venta</button>
           </div>
         </div>
@@ -201,15 +190,8 @@
           <div><label>Tipo</label><div style="display:flex;gap:8px"><select id="memTipo" onchange="Membresias.changeTipo()"></select><button class="btn small outline" onclick="Membresias.manageTipos()">⚙️ Tipos</button></div></div>
           <div><label>Inicio</label><input id="memInicio" type="date"></div>
           <div><label>Fin</label><input id="memFin" type="date"></div>
-          <div><label>Notas</label>\1\n
-      <label for="memPago">Pago con</label>
-      <select id="memPago" class="input">
-        <option value="efectivo" selected>Efectivo</option>
-        <option value="tarjeta">Tarjeta</option>
-        <option value="transferencia">Transferencia</option>
-      </select>
-</div>
-          <div class="right"><button class="btn" onclick="Membresias.guardar()">💾 Guardar</button> <button class="btn outline" onclick="Membresias.vender()">💰 Vender</button></div>
+          <div><label>Notas</label><input id="memNotas"></div>
+          <div class="right"><button class="btn" onclick="Membresias.guardar()">💾 Guardar</button> <button class="btn outline" onclick="Membresias.cobrarAqui()">💰 Cobrar aquí</button></div>
         </div>
       </div>
       <div class="panel">
